# uqcsbot-slack

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bower.json  circle.yml  deploy.sh  docker-compose.yml  external-scripts.json  google_app_cred.json  package.json  pyproject.toml  requirements.txt  setup.py  tox.ini  tsconfig.json  uqcsbot.py
purescript/: Main.purs  Scripts.purs
scripts/: acronym.js  ascii.py  attic.js  button_listener.js  caesar.js  cat.js  computers.js  conversation.js  cookbook.js  cronjobs.js  dog.js  dominos.js  ecp.js  events.js  events.ts  example.coffee  exec.js  fuel.js  go-down.coffee  help.coffee  help.js  id.js  js.js  latex.js  log.js  mood.js  parking.js  passthrough.js  pastexams.js  ping.js  purescript.js  radar.js  reactify.js  reaction.js  repo.js  shell.js  shittalk.js  shrug.js  shutdown.js  spider.js  (+15 more)
test/: :memory  ITEE_Seminar1.html  ITEE_Seminar2.html  ITEE_Upcoming_Seminars.html  ITEE_Upcoming_Seminars_empty.html  IT_service_updates.html  advent_test_data.json  bom_IDN11060.xml  bom_IDQ11295.xml  conftest.py  fontslist.txt  helpers.py  leetcode.json  parking.html  techcrunch.html  techcrunch.xml  test_advent.py  test_ascii.py  test_bgg.py  test_binify.py  test_cat.py  test_channel_log.py  test_crates.py  test_crisis.py  test_dog.py  test_echo.py  test_emoji_log.py  test_emojify.py  test_events.py  test_events_events.ics  test_exclamation.py  test_factorial.py  test_help.py  test_http.py  test_id.py  test_itsstatus.py  test_latex.py  test_leet.py  test_link.py  test_meme.py  (+24 more)
unimplemented_commands/: computers.js  (+15 more)
(+98 files in other folders)
