[tool.poetry]
name = "uqcsbot-slack"
version = "0.1.0"
description = "UQCSbot is a chat bot built in python for use on our UQCS Slack Team"
authors = ["UQ Computing Society <contact@uqcs.org.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
slackclient = "2.5.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
APScheduler = "^3.7.0"
icalendar = "^4.0.7"
pytz = "^2021.1"
python-dateutil = "^2.8.2"
google-api-python-client = "^2.20.0"
pytest-runner = "^5.3.1"
Unidecode = "^1.3.1"
feedparser = "^6.0.8"
slackblocks = "^0.2.3"
SQLAlchemy = "^1.4.23"
humanize = "^3.11.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
